[project]
name = "blog-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.1.3",
    "geograpy3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lxml-html-clean>=0.4.1",
    "nltk>=3.9.1",
    "polars>=1.26.0",
    "requests>=2.32.3",
]
